# heatEquation

./: .gitignore  CMakeLists.txt  README.md
Final-project/: CMakeLists.txt
Final-project/src/: Final-project.cxx
src/: cg.hxx  heat.hpp  heat.hxx  heatEquation.cxx  heatEquation.hpp  heatEquation.hxx  heat_general.hpp  heat_general.hxx  heat_lucas.hxx  main.cpp  main.cxx  matrix.hxx  vector.hpp  vector.hxx
